--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #1db954;
+  gap: 3em;
+}
+.logo{
+  height: 100px;
+}
+.login-button{
+  outline: none;
+  border: none;
+  color: #1db954;
+  background-color: black;
+  font-size: 25px;
+  border-radius: 50px;
+  padding: 1rem 5rem;
+  cursor: pointer;
 }
