--- a/src/components/spotify.css
+++ b/src/components/spotify.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif   ;
+}
 #container-box{
     max-width: 100vw;
     max-height: 100vh;
@@ -11,4 +16,10 @@
     height: 100%;
     width: 100%;
     background: linear-gradient(transparent, rgba(0,0,0,1));
+    background-color: rgba(32, 87, 100);
+}
+.body{
+    height: 100%;
+    width: 100%;
+    overflow: auto;
 }
