--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -69,6 +69,6 @@ img{
     flex-direction: column;
     transition: 0.3s ease-in-out;
     &:hover{
-        color: rgb(194, 34, 34);
+        color: white;
     }
 }
