--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -9,6 +9,7 @@
     top: 0;
     transition: 2s ease-in-out;
     background-color: none;
+
 }
 .search-bar{
     background-color: white;
@@ -25,6 +26,7 @@
     border: none;
     width: 100%; 
     height: 30px;
+    font-size: 1.2rem;
 }
 .avatar{
     background-color: rgba(0, 0, 0, 0.575);
