--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,14 +1,21 @@
+.main-body{
+    transition: .2s ease-in-out;
+    margin-left: 30px;
+
+}
 .playlist{
     margin: 0 2rem;
     display: flex;
     align-items: center;
     gap: 2rem;
+    
 }
 .playlist .image img{
     height: 15rem;
     width: 18rem;
-    padding-left: 25px;
+    margin-left: 30px;
     box-shadow: rgba(36, 25, 25, 0.49)0px 25px 50px 12px;
+    border-radius: 10px;
 }
 .details{
     display: flex;
@@ -29,13 +36,12 @@
     position: sticky;
     top: 15vh;
     padding: 1rem 4rem ;
-    transition: 0.3s ease-in-out;
+    transition: 2s ease-in-out;
 }
 .tracks{
     margin: 0 2rem;
     display: flex;
     flex-direction: column;
-    margin-bottom: 5rem;
 }
 .row{
     padding: 0.5rem 1.9rem;
@@ -43,7 +49,7 @@
     grid-template-columns: 0.3fr 3fr 2fr 0.1fr;
     cursor: pointer;
     &:hover{
-        background-color: rgba(0,0,0,0.7);
+        background-color: rgb(0, 0, 0);
     }
 }
 .col{
