--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,18 +1,5 @@
-.main-section-navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3rem;
-    padding-top: 10px;
-    height: 16vh;
-    position: sticky;
-    top: 0;
-    transition: 2s ease-in-out;
-    background-color: none;
-
-}
 .search-bar{
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     width: 30%;
     padding: 0.4rem 1rem;
     border-radius: 2rem;
@@ -20,13 +7,17 @@
     align-items: center;
     gap: 0.5rem;
     margin-left: 30px;
+    border: 2px solid rgb(192, 181, 181);
+    
 }
 .search-section{
     outline: none;
     border: none;
     width: 100%; 
-    height: 30px;
+    height: 40px;
     font-size: 1.2rem;
+    background-color: black;
+    color: white;  
 }
 .avatar{
     background-color: rgba(0, 0, 0, 0.575);
